<?xml version="1.0" encoding="utf-8"?>
<!--Hardik Thakkar
Sindhuja vemulapalli
Ruoshan Qin -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ticketreservation.EditTicket">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_select"
        android:text="@string/Select_Ticket" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_name"
        android:hint="@string/name"
        android:layout_below="@+id/button_select"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_source"
        android:hint="@string/source"
        android:layout_below="@+id/editText_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:editable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_destination"
        android:hint="@string/destination"
        android:layout_below="@+id/editText_source"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:editable="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip"
        android:id="@+id/textView_trip"
        android:layout_below="@+id/editText_destination"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="237dp"
        android:layout_marginEnd="237dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup2"
        android:layout_below="@+id/textView_trip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneway"
            android:id="@+id/onewayRadio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roundtrip"
            android:id="@+id/roundtripRadio"
            android:checked="false" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_departuredate"
        android:hint="@string/departuredate"
        android:layout_below="@+id/radioGroup2"
        android:enabled="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText_departuretime"
        android:hint="@string/time"
        android:layout_alignTop="@+id/editText_departuredate"
        android:layout_toRightOf="@+id/editText_departuredate"
        android:layout_toEndOf="@+id/editText_departuredate"
        android:enabled="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_returningdate"
        android:hint="@string/returningdate"
        android:layout_below="@+id/editText_departuredate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText_returningtime"
        android:hint="@string/time"
        android:layout_below="@+id/editText_departuredate"
        android:layout_toRightOf="@+id/editText_departuredate"
        android:layout_toEndOf="@+id/editText_departuredate"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button_delete"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />
</RelativeLayout>
