<?xml version="1.0" encoding="utf-8"?>

<!--Hardik Thakkar
Sindhuja vemulapalli
Ruoshan Qin -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ticketreservation.CreateTicket">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_name"
        android:hint="@string/name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_source"
        android:hint="@string/source"
        android:layout_below="@+id/editText_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:editable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_destination"
        android:layout_below="@+id/editText_source"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:hint="@string/destination"
        android:enabled="true"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip"
        android:id="@+id/textView_trip"
        android:layout_below="@+id/editText_destination"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_trip"
        android:layout_toRightOf="@+id/textView_trip"
        android:layout_toEndOf="@+id/textView_trip"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneway"
            android:id="@+id/radioButton_oneway" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roundtrip"
            android:id="@+id/radioButton_roundtrip" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_departuredate"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/departuredate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText_departuretime"
        android:layout_alignBottom="@+id/editText_departuredate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/time"
        android:layout_toRightOf="@+id/editText_departuredate"
        android:layout_toEndOf="@+id/editText_departuredate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_returndate"
        android:layout_below="@+id/editText_departuredate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/returningdate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText_returntime"
        android:layout_alignBottom="@+id/editText_returndate"
        android:layout_toRightOf="@+id/editText_departuredate"
        android:layout_toEndOf="@+id/editText_departuredate"
        android:hint="@string/time" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/printsummary"
        android:id="@+id/button_printsummary"
        android:layout_below="@+id/editText_returndate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

</RelativeLayout>
