<?xml version="1.0" encoding="utf-8"?>
<!--Hardik Thakkar
Sindhuja vemulapalli
Ruoshan Qin -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ticketreservation.CreateTicket">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_name"
        android:hint="@string/name"
        android:minHeight="30dp"
        android:height="30dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_source"
        android:hint="@string/source"
        android:layout_below="@+id/editText_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_destination"
        android:layout_below="@+id/editText_source"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:hint="@string/destination"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip"
        android:id="@+id/textView_trip"
        android:layout_below="@+id/editText_destination"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView_trip"
        android:layout_toRightOf="@+id/textView_trip"
        android:layout_toEndOf="@+id/textView_trip">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneway"
            android:id="@+id/radioButton_oneway"
            android:textSize="20sp"
            android:enabled="true"
            android:clickable="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roundtrip"
            android:id="@+id/radioButton_roundtrip"
            android:textSize="20sp"
            android:clickable="false"
            android:enabled="true" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_departuredate"
        android:hint="@string/departuredate"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText_departuretime"
        android:layout_alignBottom="@+id/editText_departuredate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/time"
        android:layout_toRightOf="@+id/editText_departuredate"
        android:layout_toEndOf="@+id/editText_departuredate"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_returndate"
        android:hint="@string/returningdate"
        android:textSize="20sp"
        android:layout_above="@+id/button_Finish"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="61dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText_returntime"
        android:layout_alignBottom="@+id/editText_returndate"
        android:layout_toRightOf="@+id/editText_departuredate"
        android:layout_toEndOf="@+id/editText_departuredate"
        android:hint="@string/time"
        android:textSize="20sp"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:id="@+id/button_Finish"
        android:layout_marginBottom="73dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonPrevious"
        android:layout_below="@+id/editText_returndate"
        android:layout_toLeftOf="@+id/button_Finish"
        android:layout_toStartOf="@+id/button_Finish"
        android:src="@android:drawable/ic_media_previous" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonFirst"
        android:src="@android:drawable/ic_media_rew"
        android:layout_below="@+id/editText_returndate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonNext"
        android:src="@android:drawable/ic_media_next"
        android:layout_alignTop="@+id/button_Finish"
        android:layout_toRightOf="@+id/button_Finish"
        android:layout_toEndOf="@+id/button_Finish" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonLast"
        android:layout_below="@+id/editText_returndate"
        android:layout_alignRight="@+id/editText_returntime"
        android:layout_alignEnd="@+id/editText_returntime"
        android:src="@android:drawable/ic_media_ff" />

</RelativeLayout>
